done some beatification

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #343a40;
+            background: url('https://miro.medium.com/v2/resize:fit:828/format:webp/0*s6JTB-lNULLGP3iH') no-repeat center center fixed;
+            background-size: cover;
             color: #f8f9fa;
         }
 
@@ -16,7 +17,7 @@
             max-width: 600px;
             margin: 50px auto;
             padding: 20px;
-            background: #495057;
+            background: rgba(73, 80, 87, 0.9);
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
@@ -77,48 +78,47 @@
                         <option value="group D">Group D</option>
                         <option value="group E">Group E</option>
                     </select>
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Parental Level of Education</label>
-                    <select class="form-control" name="parental_level_of_education" required>
-                        <option selected disabled value="">Select Parent Education</option>
-                        <option value="associate's degree">Associate's degree</option>
-                        <option value="bachelor's degree">Bachelor's degree</option>
-                        <option value="high school">High school</option>
-                        <option value="master's degree">Master's degree</option>
-                        <option value="some college">Some college</option>
-                        <option value="some high school">Some high school</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Lunch Type</label>
-                    <select class="form-control" name="lunch" required>
-                        <option selected disabled value="">Select Lunch Type</option>
-                        <option value="free/reduced">Free/Reduced</option>
-                        <option value="standard">Standard</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Test Preparation Course</label>
-                    <select class="form-control" name="test_preparation_course" required>
-                        <option selected disabled value="">Select Test Course</option>
-                        <option value="none">None</option>
-                        <option value="completed">Completed</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Writing Score out of 100</label>
-                    <input class="form-control" type="number" name="writing_score"
-                        placeholder="Enter your Writing Score" min="0" max="100" required>
-                </div>
-                <div class="form-group">
-                    <label class="form-label">Reading Score out of 100</label>
-                    <input class="form-control" type="number" name="reading_score"
-                        placeholder="Enter your Reading Score" min="0" max="100" required>
-                </div>
-                <div class="form-group">
-                    <input class="btn btn-primary" type="submit" value="Predict your Maths Score">
-                </div>
+                    <div class="form-group">
+                        <label class="form-label">Parental Level of Education</label>
+                        <select class="form-control" name="parental_level_of_education" required>
+                            <option selected disabled value="">Select Parent Education</option>
+                            <option value="associate's degree">Associate's degree</option>
+                            <option value="bachelor's degree">Bachelor's degree</option>
+                            <option value="high school">High school</option>
+                            <option value="master's degree">Master's degree</option>
+                            <option value="some college">Some college</option>
+                            <option value="some high school">Some high school</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Lunch Type</label>
+                        <select class="form-control" name="lunch" required>
+                            <option selected disabled value="">Select Lunch Type</option>
+                            <option value="free/reduced">Free/Reduced</option>
+                            <option value="standard">Standard</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Test Preparation Course</label>
+                        <select class="form-control" name="test_preparation_course" required>
+                            <option selected disabled value="">Select Test Course</option>
+                            <option value="none">None</option>
+                            <option value="completed">Completed</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Writing Score out of 100</label>
+                        <input class="form-control" type="number" name="writing_score"
+                            placeholder="Enter your Writing Score" min="0" max="100" required>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Reading Score out of 100</label>
+                        <input class="form-control" type="number" name="reading_score"
+                            placeholder="Enter your Reading Score" min="0" max="100" required>
+                    </div>
+                    <div class="form-group">
+                        <input class="btn btn-primary" type="submit" value="Predict your Maths Score">
+                    </div>
             </fieldset>
         </form>
         <h2>THE prediction is {{results}}</h2>
